Well it's something

--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -12,7 +12,7 @@
 
             * {
                 font-family: 'Source Code Pro', monospace;
-                font-size: 28px;
+                font-size: 18px;
             }
 
             .group-header {
@@ -30,35 +30,19 @@
                 display: block;
                 position: absolute;
                 height: 100%;
-                border-radius: 16px;
+                border-radius: 0;
                 box-shadow: inset 0 0 0 0.5px white;
                 font-style: normal;
                 text-align: center;
                 text-shadow: 0 0 4px black;
             }
 
-            i.Mapped {
-                background: #f4a261;
-            }
-
-            i.DontNeed {
+            i.Yes {
                 background: #2a9d8f;
             }
 
-            i.Unmapped {
+            i.No {
                 background: #264653;
-            }
-
-            i.Heap {
-                background: #e76f51;
-            }
-
-            i.OldHeap {
-                background: #264653;
-            }
-
-            i.default {
-                background: #8ecae6;
             }
         </style>
     </head>
