--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -38,11 +38,15 @@
             }
 
             i.Yes {
-                background: #2a9d8f;
+                background: #9999ff;
             }
 
             i.No {
-                background: #264653;
+                background: #444499;
+            }
+
+            i.Unmapped {
+                background: #222222;
             }
         </style>
     </head>
