--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -12,7 +12,7 @@
 
             * {
                 font-family: 'Source Code Pro', monospace;
-                font-size: 18px;
+                font-size: 14px;
             }
 
             .group-header {
@@ -22,7 +22,7 @@
 
             .group {
                 width: 100%;
-                height: 4em;
+                height: 8em;
                 position: relative;
             }
 
@@ -33,20 +33,20 @@
                 border-radius: 0;
                 box-shadow: inset 0 0 0 0.5px white;
                 font-style: normal;
-                text-align: center;
+                text-align: left;
                 text-shadow: 0 0 4px black;
             }
 
             i.Yes {
-                background: #9999ff;
+                background: #7777ff;
             }
 
             i.No {
-                background: #444499;
+                background: #555599;
             }
 
             i.Unmapped {
-                background: #222222;
+                background: #1f1f1f;
             }
         </style>
     </head>
