--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -22,7 +22,7 @@
 
             .group {
                 width: 100%;
-                height: 8em;
+                height: 4em;
                 position: relative;
             }
 
@@ -31,7 +31,8 @@
                 position: absolute;
                 height: 100%;
                 border-radius: 0;
-                box-shadow: inset 0 0 0 0.5px white;
+                border-left: 1px solid white;
+                /* box-shadow: inset 0 0 0 0.5px white; */
                 font-style: normal;
                 text-align: left;
                 text-shadow: 0 0 4px black;
