--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -8,46 +8,80 @@
         @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
         :root {
-            --rss-color: #0d4382;
+            --body-bg: #131314;
+            --rss-color: #52796f;
+            --virt-color: #354f52;
+            --group-bg: #232323;
         }
 
         body {
-            background: #14141f;
+            background: var(--body-bg);
             color: #fafafa;
             margin: 20px;
         }
 
         * {
-            /* font-family: 'Source Code Pro', monospace; */
             font-family: 'Share Tech Mono', monospace;
             font-size: 16px;
         }
 
         .mem-stats {
+            /* min-width: 12em; */
+            /* text-align: center; */
+            text-align: left;
             font-size: 150%;
-            padding-right: 3em;
+            padding: .3em .6em;
+            border-radius: 4px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            margin-right: 1em;
+            margin-bottom: 1em;
+            display: inline-block;
+        }
+
+        .mem-stats .name {
+            font-variant: small-caps;
+            font-size: 110%;
+            margin-right: 1em;
+        }
+
+        .mem-stats.virt {
+            background-color: var(--virt-color);
+        }
+
+        .mem-stats.rss {
+            background-color: var(--rss-color);
+        }
+
+        .group-outer {
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 4px;
+            background: var(--group-bg);
+            padding: 0 .2em;
+            margin: .4em 0;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
         }
 
         .group-header {
-            margin-top: 1.2em;
-            margin-bottom: .4em;
+            /* font-size: 120%; */
+            margin: 0 .5em;
         }
 
         .group {
             width: 100%;
-            height: 4em;
+            height: 2em;
             position: relative;
-            margin: 1em;
         }
 
         i {
             display: block;
             position: absolute;
             height: 100%;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 1px;
+            border-left: 1px solid rgba(255, 255, 255, 0.3);
             font-style: normal;
             text-align: left;
-            /* vertical-align: middle; */
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow-x: hidden;
@@ -56,21 +90,13 @@
         }
 
         i.Yes {
-            background-color: #0d4382;
-            /* box-shadow: 0 0 15px rgba(255, 255, 255, 0.15); */
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            background-color: var(--rss-color);
+            /* box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); */
+            /* box-shadow: 0 0 10px rgba(255, 255, 255, 0.2); */
         }
 
         i.No {
-            /* background: repeating-linear-gradient(45deg,
-                    #0d4382,
-                    #0d4382 10px,
-                    #1f1f1f 10px,
-                    #1f1f1f 20px); */
-            /* box-shadow: 0 0 15px rgba(255, 255, 255, 0.15); */
-            /* box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.2); */
-            /* background-color: rgba(255, 255, 255, 0.2); */
-            background-color: #222;
+            background-color: var(--virt-color);
         }
 
         i.Unmapped {
