--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -1,55 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
-            body {
-                background: #010101;
-                color: #fafafa;
-                margin: 20px;
-            }
+<head>
+    <title>mevi3</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
-            * {
-                font-family: 'Source Code Pro', monospace;
-                font-size: 14px;
-            }
+        :root {
+            --body-bg: #111111;
+            --group-bg: #0d1b2a;
+            --virt-color: #1b263b;
+            --rss-color: #415a77;
+        }
 
-            .group-header {
-                margin-top: 1.2em;
-                margin-bottom: .4em;
-            }
+        body {
+            background: var(--body-bg);
+            color: #fafafa;
+            /* color: #111; */
+            margin: 20px;
+        }
 
-            .group {
-                width: 100%;
-                height: 4em;
-                position: relative;
-            }
+        * {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 18px;
+        }
 
-            i {
-                display: block;
-                position: absolute;
-                height: 100%;
-                border-radius: 0;
-                border-left: 1px solid white;
-                /* box-shadow: inset 0 0 0 0.5px white; */
-                font-style: normal;
-                text-align: left;
-                text-shadow: 0 0 4px black;
-            }
+        .mem-stats {
+            /* min-width: 12em; */
+            /* text-align: center; */
+            text-align: left;
+            font-size: 150%;
+            padding: .3em .6em;
+            border-radius: 4px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            margin-right: 1em;
+            margin-bottom: 1em;
+            display: inline-block;
+        }
 
-            i.Yes {
-                background: #7777ff;
-            }
+        .mem-stats .name {
+            font-variant: small-caps;
+            font-size: 110%;
+            margin-right: 1em;
+        }
 
-            i.No {
-                background: #555599;
-            }
+        .mem-stats.virt {
+            background-color: var(--virt-color);
+        }
 
-            i.Unmapped {
-                background: #1f1f1f;
-            }
-        </style>
-    </head>
-    <body></body>
+        .mem-stats.rss {
+            background-color: var(--rss-color);
+        }
+
+        .group-outer {
+            /* border: 1px solid rgba(255, 255, 255, 0.3); */
+            border-radius: 4px;
+            /* background: var(--group-bg); */
+            padding: 0 .2em;
+            margin: .4em 0;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        .group-header {
+            margin: 0 1em 0 .6em;
+        }
+
+        .group {
+            width: 100%;
+            height: 2em;
+            position: relative;
+        }
+
+        i {
+            display: block;
+            position: absolute;
+            height: 100%;
+            border-radius: 1px;
+            border-left: 1px solid rgba(255, 255, 255, 0.3);
+            font-style: normal;
+            text-align: left;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow-x: hidden;
+            text-indent: .2em;
+            line-height: 2;
+        }
+
+        i.Resident {
+            background-color: var(--rss-color);
+            /* box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); */
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+        }
+
+        i.NotResident {
+            background-color: var(--virt-color);
+        }
+
+        i.Unmapped {
+            background-color: #1f1f1f;
+        }
+    </style>
+</head>
+
+<body></body>
+
 </html>
