I think it's broken

--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -10,8 +10,11 @@
         :root {
             --body-bg: #111111;
             --group-bg: #0d1b2a;
-            --virt-color: #1b263b;
-            --rss-color: #415a77;
+            /* --virt-color: #1b263b;
+            --rss-color: #415a77; */
+
+            --virt-color: #bc6c25;
+            --rss-color: #dda15e;
         }
 
         body {
@@ -37,6 +40,14 @@
             margin-right: 1em;
             margin-bottom: 1em;
             display: inline-block;
+        }
+
+        .process {
+            padding: .3em .6em;
+            border-radius: 4px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            margin-right: 1em;
+            margin-bottom: 1em;
         }
 
         .mem-stats .name {
