--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 
 <head>
-    <title>mevi3</title>
+    <title>mevi</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
         :root {
-            --body-bg: #111111;
+            --body-bg: #1e1d1c;
             --group-bg: #0d1b2a;
-            /* --virt-color: #1b263b;
-            --rss-color: #415a77; */
 
-            --virt-color: #bc6c25;
-            --rss-color: #dda15e;
+            --virt-color: #1c3956;
+            --rss-color: #97104f;
+            --cell-text: #ffffff;
         }
 
         body {
@@ -27,6 +26,10 @@
         * {
             font-family: 'Share Tech Mono', monospace;
             font-size: 18px;
+        }
+
+        .mem-stats, i {
+            color: var(--cell-text);
         }
 
         .mem-stats {
@@ -65,11 +68,11 @@
         }
 
         .group-outer {
-            /* border: 1px solid rgba(255, 255, 255, 0.3); */
+            border: 1px solid rgba(255, 255, 255, 0.3);
             border-radius: 4px;
-            /* background: var(--group-bg); */
+            background: var(--group-bg);
             padding: 0 .2em;
-            margin: .4em 0;
+            margin: 1em 0;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -102,8 +105,7 @@
 
         i.Resident {
             background-color: var(--rss-color);
-            /* box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); */
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+            /* box-shadow: 0 0 20px rgba(255, 255, 255, 0.35); */
         }
 
         i.NotResident {
