--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -19,7 +19,6 @@
         body {
             background: var(--body-bg);
             color: #fafafa;
-            /* color: #111; */
             margin: 20px;
         }
 
@@ -33,9 +32,8 @@
         }
 
         .mem-stats {
-            /* min-width: 12em; */
-            /* text-align: center; */
-            text-align: left;
+            min-width: 12em;
+            text-align: center;
             font-size: 150%;
             padding: .3em .6em;
             border-radius: 4px;
@@ -51,6 +49,24 @@
             border: 1px solid rgba(255, 255, 255, 0.3);
             margin-right: 1em;
             margin-bottom: 1em;
+
+            padding: 1em;
+        }
+
+        .process-info {
+            font-size: 110%;
+            display: flex;
+        }
+
+        .pid, .arg {
+            padding: .5em;
+            margin-right: .5em;
+            border-radius: 4px;
+            border: 1px solid rgb(64, 64, 64);
+        }
+
+        .pid {
+            background: #373737;
         }
 
         .mem-stats .name {
@@ -68,18 +84,14 @@
         }
 
         .group-outer {
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            border-radius: 4px;
-            background: var(--group-bg);
-            padding: 0 .2em;
-            margin: 1em 0;
+            margin-top: 1em;
             display: flex;
             flex-direction: row;
             align-items: center;
         }
 
         .group-header {
-            margin: 0 1em 0 .6em;
+            margin-right: 1em;
         }
 
         .group {
