--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -45,21 +45,19 @@
 
         .process {
             border-radius: 4px;
-            /* border: 1px solid rgba(255, 255, 255, 0.3); */
             margin-right: 1em;
             margin-bottom: 1em;
-
-            /* padding: 1em; */
         }
 
         .process-info {
             font-size: 110%;
             display: flex;
+            flex-wrap: wrap;
+            gap: .2em;
         }
 
         .pid, .arg {
             padding: .5em;
-            margin-right: .5em;
             border-radius: 4px;
             border: 1px solid rgb(64, 64, 64);
         }
@@ -87,6 +85,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+            padding-left: 2em;
         }
 
         .group-header {
