box shadows I guess

--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -103,7 +103,10 @@
             position: absolute;
             height: 100%;
             border-radius: 1px;
-            border-left: 1px solid transparent;
+            border-left: 1px solid rgba(255, 255, 255, 0.5);
+
+            box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.3);
+
             font-style: normal;
             text-align: left;
             white-space: nowrap;
