Show untracked memory

--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -14,6 +14,7 @@
             --virt-color: #1c3956;
             --rss-color: #97104f;
             --cell-text: #ffffff;
+            --untracked-color: #b09b0d;
         }
 
         body {
@@ -127,6 +128,10 @@
 
         i.Unmapped {
             background-color: #1f1f1f;
+        }
+
+        i.Untracked {
+            background-color: var(--untracked-color);
         }
     </style>
 </head>
