--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -28,6 +28,19 @@
             font-size: 16px;
         }
 
+        .mem-stats-container {
+            position: sticky;
+            top: 1em;
+            padding: 1em 0;
+
+            display: flex;
+            flex-direction: row;
+            gap: 1em;
+
+            background: var(--body-bg);
+            z-index: 40;
+        }
+
         .mem-stats, i {
             color: var(--cell-text);
         }
@@ -39,8 +52,6 @@
             padding: .3em .6em;
             border-radius: 4px;
             border: 1px solid rgba(255, 255, 255, 0.3);
-            margin-right: 1em;
-            margin-bottom: 1em;
             display: inline-block;
         }
 
