--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -102,6 +102,10 @@
             background-color: var(--rss-color);
         }
 
+        .group-gap {
+            text-align: center;
+        }
+
         .group-outer {
             margin-top: .3em;
             display: flex;
