--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -36,6 +36,7 @@
 
             display: flex;
             flex-direction: row;
+            align-items: center;
             gap: 1em;
 
             background: var(--body-bg);
