--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -4,8 +4,10 @@
 <head>
     <title>mevi</title>
     <style>
-        /* @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap'); */
+        /*
+         * 👋 Before you judge me: don't.
+         */
+
         @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
         @import url('https://iosevka-webfonts.github.io/iosevka/iosevka.css');
 
@@ -33,8 +35,6 @@
         }
 
         * {
-            /* font-family: 'Share Tech Mono', monospace; */
-            /* font-family: 'Source Code Pro', monospace; */
             font-family: 'Iosevka Web', monospace;
             font-size: 18px;
         }
@@ -66,7 +66,8 @@
         }
 
         .brand .brand-rest {
-            color: rgb(155 155 151);
+            /* straight from the yellow room */
+            color: rgb(242 242 73);
         }
 
         .live-indicator {
@@ -84,7 +85,6 @@
         }
 
         .mem-stats-container .mem-stats {
-            /* min-width: 8em; */
             padding: .3em .6em;
         }
 
@@ -98,8 +98,6 @@
             align-items: center;
 
             text-align: center;
-            /* border-radius: 4px;
-            border: 1px solid rgba(255, 255, 255, 0.3); */
             padding: .2em;
         }
 
@@ -128,14 +126,6 @@
             font-weight: bold;
             margin-right: .5em;
         }
-
-        /* .mem-stats.virt {
-            background-color: var(--virt-color);
-        }
-
-        .mem-stats.rss {
-            background-color: var(--rss-color);
-        } */
 
         .mem-stats .mem-square {
             display: inline-block;
@@ -191,10 +181,6 @@
             display: block;
             position: absolute;
             height: 100%;
-            /* border-radius: 4px;
-            border: 1px solid rgb(220 220 220 / 50%); */
-            /* box-shadow: inset 0 0 25px rgb(0 0 0 / 35%); */
-            /* box-shadow: inset 0 0 10px rgb(255 255 255 / 35%); */
             font-style: normal;
             text-align: left;
             white-space: nowrap;
@@ -206,15 +192,10 @@
 
         i.Resident {
             background-color: var(--rss-color);
-            /* border-color: rgba(255, 255, 255, 0.5); */
         }
 
         i.NotResident {
             background-color: var(--virt-color);
-        }
-
-        i.Unmapped {
-            background-color: #1f1f1f;
         }
 
         i.Untracked {
