fix viz a little

--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -111,9 +111,11 @@
         .process-info {
             font-size: 110%;
             display: flex;
-            flex-wrap: wrap;
             gap: .4em;
             padding-bottom: .5em;
+
+            overflow-x: auto;
+            white-space: nowrap;
         }
 
         .pid, .arg {
