Add show gaps / show non-resident groups options

--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -39,7 +39,7 @@
             font-size: 18px;
         }
 
-        .mem-stats-container {
+        .top-bar {
             position: sticky;
             top: 0em;
             padding: .3em;
@@ -53,6 +53,14 @@
             z-index: 40;
 
             font-size: 150%;
+        }
+
+        .top-bar .option {
+            padding: .3em;
+        }
+
+        .top-bar .option input {
+            padding-right: .2em;
         }
 
         .brand > span {
