Enable wasm-opt

--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>mevi</title>
+    <link data-trunk rel="rust" data-wasm-opt="z" />
     <style>
         /*
          * 👋 Before you judge me: don't.
