add some more borders again

--- a/crates/mevi-frontend/index.html
+++ b/crates/mevi-frontend/index.html
@@ -209,6 +209,7 @@
             overflow-x: hidden;
             text-indent: 0.2em;
             line-height: 2;
+            border-left: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         i.r {
